# whisper.cpp

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  whisper.cpp
examples/: CMakeLists.txt  common.cpp  common.h
examples/whisperrust/: CMakeLists.txt  whisperrust.cpp
rust/src/: accel.rs  audio.rs  errors.rs  lib.rs  rb.rs
rust/whisper_wrapper/: whisper_wrapper.cpp  whisper_wrapper.h
